fixes texts and contrast issues, adds guild images

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,7 +31,7 @@ a {
 
 a:hover,
 .card-footer a:hover {
-  color: #fed22a;
+  color: #775f00;
   text-decoration: none;
 }
 
